完成文章内容

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -4,3 +4,28 @@ body {
 .card{
     margin-bottom: 30px !important;
 }
+
+/*去除a标签默认样式*/
+a {
+    text-decoration: none;
+}
+/*正常的未被访问过的链接*/
+a:link {
+    text-decoration: none;
+}
+/*已经访问过的链接*/
+a:visited {
+    text-decoration: none;
+}
+/*鼠标划过(停留)的链接*/
+a:hover {
+    text-decoration: none;
+}
+/* 正在点击的链接*/
+a:active {
+    text-decoration: none;
+}
+.pagination{
+    display: flex ;
+    justify-content: center ;
+}
